remove/add edges

--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -1,12 +1,12 @@
 
 CC=g++
-CFLAGS=-Wall
+CFLAGS=-Wall -g
 INCLUDE_PATH=-I/usr/include -I. 
 LIB_PATH=/usr/lib
 
 
-all:  Trie.o main.o
-	$(CC) $(CFLAGS) -o cpp_finder Trie.o main.o -lstdc++
+all:  Node.o Trie.o main.o
+	$(CC) $(CFLAGS) -o cpp_finder Node.o Trie.o main.o -lstdc++
 
 test: Trie.o
 	$(CC) $(CFLAGS) -o test_cpp_finder Trie.o -L$(LIB_PATH) -lstdc++ -lcppunit 
@@ -17,6 +17,8 @@ main.o: main.cpp
 Trie.o: Trie.cpp
 	$(CC) $(CFLAGS) $(INCLUDE_PATH) -c Trie.cpp 
 
+Node.o: Node.cpp
+	$(CC) $(CFLAGS) $(INCLUDE_PATH) -c Node.cpp 
 
 clean:
 	rm -f *.o cpp_finder
