more generic makefiel

--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -2,17 +2,19 @@
 CC=g++
 CFLAGS=-Wall -g
 INCLUDE_PATH=-I/usr/include -I. 
-LIB_PATH=/usr/lib
+LIB_PATH= -L/usr/lib
+LIBS = -lstdc++
+LIBS_TEST = -lcppunit
 
 
 all:  Node.o Trie.o main.o
-	$(CC) $(CFLAGS) -o cpp_finder Node.o Trie.o main.o -lstdc++
+	$(CC) $(CFLAGS) -o cpp_finder Node.o Trie.o main.o $(LIBS) $(LIB_PATH)
 
 test: Trie.o
-	$(CC) $(CFLAGS) -o test_cpp_finder Trie.o -L$(LIB_PATH) -lstdc++ -lcppunit 
+	$(CC) $(CFLAGS) -o test_cpp_finder Trie.o $(LIB_PATH) $(LIBS) $(LIBS_TEST)
 
 main.o: main.cpp
-	$(CC) $(CFLAGS) $(INCLUDE_PATH) -c main.cpp -lstdc++
+	$(CC) $(CFLAGS) $(INCLUDE_PATH) -c main.cpp $(LIBS) 
 
 Trie.o: Trie.cpp
 	$(CC) $(CFLAGS) $(INCLUDE_PATH) -c Trie.cpp 
@@ -22,3 +24,4 @@ Node.o: Node.cpp
 
 clean:
 	rm -f *.o cpp_finder
+	rm -f test_cpp_finder
