--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -1,20 +1,18 @@
 
 CC=g++
-CFLAGS=-Wall -g -Wextra -pedantic
+CFLAGS=-Wall -g -Wextra 
 INCLUDE_PATH=-I/usr/include -I. 
 LIB_PATH= -L/usr/lib
 LIBS = -lstdc++
 LIBS_TEST = -lcppunit
 
+.PHONY: test clean 
 
 all:  Node.o Trie.o main.o
 	$(CC) $(CFLAGS) -o cpp_finder Node.o Trie.o main.o $(LIBS) $(LIB_PATH)
 
 test: 
-	cd ./test && make
-
-clean-test:
-	cd ./test && make clean
+	$(MAKE) -C test
 
 main.o: main.cpp
 	$(CC) $(CFLAGS) $(INCLUDE_PATH) -c main.cpp $(LIBS) 
@@ -26,4 +24,5 @@ Node.o: Node.cpp
 	$(CC) $(CFLAGS) $(INCLUDE_PATH) -c Node.cpp 
 
 clean:
-	rm -f *.o cpp_finder
+	$(RM) -f *.o cpp_finder
+	$(MAKE) clean -C test
